--- a/FrontChama/pages/faq.css
+++ b/FrontChama/pages/faq.css
@@ -326,6 +326,33 @@ body {
     line-height: 1.6;
 }
 
+/*Chat-Bot*/
+#chatBox {
+    max-height: 500px;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+.msg {
+    animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(4px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* ===== FOOTER ===== */
 .site-footer {
     text-align: center;
