--- a/FrontChama/css/chamados.css
+++ b/FrontChama/css/chamados.css
@@ -73,6 +73,9 @@ header.site-header {
     text-decoration: none;
     font-weight: 600;
 }
+.main-nav a:hover {
+    color: var(--primary);
+}
 
 .main-nav a.active {
     border-bottom: 2px solid var(--primary);
@@ -229,7 +232,7 @@ header.site-header {
 /* Coloca os botões lado a lado */
 #modalEditar .modal-footer {
     display: flex;
-    gap: 12px;          /* distância entre eles */
+    gap: 12px;          
     justify-content: center;
     margin-top: 15px;
 }
@@ -499,4 +502,65 @@ header.site-header {
     background: var(--light);
     border-top: 1px solid #ddd;
     margin-top: auto;
+}
+
+/* RESPONSIVIDADE */
+@media (max-width: 768px) {
+
+    .layout {
+        display: block; /* <-- CORREÇÃO */
+        min-height: auto; /* <-- pra não esmagar */
+    }
+
+    .sidebar {
+        width: 100%;
+        min-height: auto;
+        margin-bottom: 20px;
+        position: relative;
+    }
+
+    .cards-dashboard {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .info-card {
+        width: 100%;
+    }
+
+    .recent-activity {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .site-header {
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+    }
+
+    .main-nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .faq-table {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        white-space: nowrap; 
+    }
+
+        .faq-table th,
+        .faq-table td {
+            padding: 10px;
+            font-size: 0.9rem;
+        }
+
+
+    .faq-section {
+        overflow-x: auto;
+    }
 }
