--- a/FrontChama/css/login.css
+++ b/FrontChama/css/login.css
@@ -17,7 +17,7 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-/* Page center */
+
 .page {
     min-height: 100vh;
     display: flex;
@@ -53,7 +53,7 @@ body {
 }
 
 
-/* LEFT PANEL */
+/* PANEL da esquerda*/
 .panel-left {
     width: 36%;
     min-width: 260px;
@@ -93,7 +93,7 @@ body {
 }
 
 
-/* RIGHT PANEL */
+/* DIREITA PANEL */
 .panel-right {
     background: var(--white);
     padding: 28px 54px
@@ -191,4 +191,27 @@ body {
     border: 2px solid #e53935 !important;
     background-color: #ffebee !important;
     box-shadow: 0 0 0 2px rgba(229, 57, 53, 0.2);
+}
+
+/* RESPONSIVIDADE */
+@media (max-width: 480px) {
+
+    .login-container {
+        flex-direction: column;
+    }
+
+    /* BEM-VINDO (left-panel) */
+    .left-panel {
+        order: 1 !important;
+        width: 100% !important;
+        padding: 32px 20px !important;
+        text-align: center;
+    }
+
+    /* LOGIN (right-panel) */
+    .right-panel {
+        order: 2 !important;
+        width: 100% !important;
+        padding: 32px 20px !important;
+    }
 }
